@@ -42,6 +42,7 @@ Version 7.0.1
   - AssocArray: added export and import of WideString
   - AssocArray: added export and import of Array  
   - Array operators == and != are now defined as const
+  - changed behaviour of String::isNumeric
    
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
